--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
   </head>
   <body>
 
+    <script   src="https://code.jquery.com/jquery-2.2.4.min.js"
+      integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
+    <script src="scripts/app.js" charset="utf-8"></script>
   </body>
 </html>
